--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,33 @@
+---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Kele | Portafolio</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Kele | Portafolio</title>
+  </head>
+  <body
+    class="min-h-screen min-w-full bg-gradient-to-bl from-aqua-50 to-aqua-100 bg-no-repeat"
+  >
+    <div>
+      <Header />
+
+      <slot />
+
+      <Footer />
+    </div>
+  </body>
+
+  <style>
+    *::-webkit-scrollbar {
+      width: 0;
+      display: none;
+    }
+  </style>
 </html>
