--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
+
+import Main from "../components/sections/Main.astro";
 ---
 
 <Layout>
-	<h1 class="text-5xl">Hello world</h1>
+  <!-- MAIN SECTION -->
+  <Main />
 </Layout>
