add: about and one job page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,9 @@ import Logo from "./common/Logo.astro";
 ---
 
 <header class="w-full max-w-screen-xl mx-auto px-4 py-10 flex justify-between">
-  <Logo />
+  <a href="/">
+    <Logo />
+  </a>
 
   <nav>
     <Navigation />
