--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,11 +3,11 @@ import Navigation from "../components/common/Navigation.astro";
 import Logo from "./common/Logo.astro";
 ---
 
-<footer class="bg-white rounded-lg shadow m-4">
+<footer class="m-4">
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
     <div class="sm:flex sm:items-center sm:justify-between">
       <a
-        href="#"
+        href="/"
         class="flex items-center mb-4 sm:mb-0 space-x-3
       rtl:space-x-reverse"
       >
