--- a/src/components/common/Navigation.astro
+++ b/src/components/common/Navigation.astro
@@ -6,14 +6,19 @@
   class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0"
 >
   <li>
-    <a class="hover:underline me-4 md:me-6" href="#">Inicio</a>
+    <a class="hover:underline me-4 md:me-6" href="/">Inicio</a>
   </li>
 
   <li>
-    <a class="hover:underline me-4 md:me-6" href="#">Sobre mi</a>
+    <a class="hover:underline me-4 md:me-6" href="/about">Sobre mi</a>
   </li>
 
   <li>
-    <a class="hover:underline me-4 md:me-6" href="#">Instagram</a>
+    <a
+      class="hover:underline me-4 md:me-6"
+      target="_blank"
+      href="https://www.instagram.com/kdevlges?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+      >Instagram</a
+    >
   </li>
 </ul>
