--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import { ClientRouter } from "astro:transitions";
+
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 ---
@@ -10,11 +12,12 @@ import Footer from "../components/Footer.astro";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+
+    <ClientRouter />
+
     <title>Kele | Portafolio</title>
   </head>
-  <body
-    class="min-h-screen min-w-full bg-gradient-to-bl from-aqua-50 to-aqua-100 bg-no-repeat"
-  >
+  <body class="min-h-screen min-w-full bg-liten text-darken">
     <div>
       <Header />
 
@@ -22,9 +25,7 @@ import Footer from "../components/Footer.astro";
 
       <Footer />
     </div>
-  </body>
-
-  <style>
+  </body><style>
     *::-webkit-scrollbar {
       width: 0;
       display: none;
