--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,10 @@ import Logo from "./common/Logo.astro";
 
 <footer class="m-4">
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-    <div class="sm:flex sm:items-center sm:justify-between">
+    <div class="justify-center sm:justify-between flex items-center">
       <a
         href="/"
-        class="flex items-center mb-4 sm:mb-0 space-x-3
+        class="hidden sm:flex items-center mb-4 sm:mb-0 space-x-3
       rtl:space-x-reverse"
       >
         <Logo />
