--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import Navigation from "../components/common/Navigation.astro";
 import Logo from "./common/Logo.astro";
 ---
 
-<header class="w-full max-w-screen-xl mx-auto px-4 py-10 flex justify-between">
-  <a href="/">
+<header class="w-full max-w-screen-xl mx-auto px-4 py-10 flex justify-center sm:justify-between">
+  <a href="/" class="hidden sm:flex">
     <Logo />
   </a>
 
