--- a/src/pages/jobs/[id].astro
+++ b/src/pages/jobs/[id].astro
@@ -18,7 +18,7 @@ export const prerender = true;
 ---
 
 <Layout>
-  <main class="grid grid-cols-3">
+  <main class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2">
     <article class="p-2 col-span-1 flex flex-col">
       <p class="self-end">13-02-2025</p>
 
