--- a/src/pages/jobs/[id].astro
+++ b/src/pages/jobs/[id].astro
@@ -23,15 +23,11 @@ const { id, title, date, desc, resources } = job;
 
 const tags = await getEntries(job.tags);
 
-console.log(`<<< resources >>>`, resources);
-
 export const prerender = true;
 ---
 
 <Layout>
-  <section
-    class="p-2 columns-1 lg:columns-3 md:columns-2 space-y-4"
-  >
+  <section class="p-2 columns-1 lg:columns-3 md:columns-2 space-y-4">
     <article class="col-span-1 flex flex-col">
       <date class="self-end">{date}</date>
 
@@ -57,8 +53,6 @@ export const prerender = true;
 
     {
       resources.map((r: any, index: number) => {
-
-        console.log(`<<< r >>>`, r);
         return (
           <article class="min-h-10 shadow">
             <Image src={r} alt={`image_${index}`} />
